# file-signature

./: .gitmodules  CMakeLists.txt  README.md
src/: data.hpp  hasher.cpp  hasher.hpp  main.cpp  processor.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
src/common/: semaphore.cpp  semaphore.hpp  sync_queue.hpp
test/: CMakeLists.txt  bench_read.cpp
